--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,30 @@
 
 @string{aps = {American Physical Society,}}
 
+@inproceedings{shen2023network,
+  title={Network-centric distributed tracing with DeepFlow: Troubleshooting your microservices in zero code},
+  author={Shen, Junxian and Zhang, Han and Xiang, Yang and Shi, Xingang and Li, Xinrui and Shen, Yunxi and Zhang, Zijian and Wu, Yongxiang and Yin, Xia and Wang, Jilong and others},
+  booktitle={Proceedings of the ACM SIGCOMM 2023 Conference},
+  pages={420--437},
+  year={2023}
+}
+
+@article{zhang2022achieving,
+  title={Achieving high availability in inter-DC WAN traffic engineering},
+  author={Zhang, Han and Yin, Xia and Shi, Xingang and Wang, Jilong and Wang, Zhiliang and Guo, Yingya and Lan, Tian and Li, Yahui and Zhu, Yongqing and Ruan, Ke and others},
+  journal={IEEE/ACM Transactions on Networking},
+  year={2022},
+  publisher={IEEE}
+}
+
+@inproceedings{shen2022gringotts,
+  title={Gringotts: Fast and accurate internal denial-of-wallet detection for serverless computing},
+  author={Shen, Junxian and Zhang, Han and Geng, Yantao and Li, Jiawei and Wang, Jilong and Xu, Mingwei},
+  booktitle={Proceedings of the 2022 ACM SIGSAC Conference on Computer and Communications Security},
+  pages={2627--2641},
+  year={2022}
+}
+
 @book{einstein1920relativity,
   title={Relativity: the Special and General Theory},
   author={Einstein, Albert},
