--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -47,3 +47,44 @@
   pdf={},
 }
 
+
+@article{zhang2019fd,
+  title={DA\&FD--deadline-aware and flow duration-based rate control for mixed flows in DCNs},
+  author={Zhang, Han and Geng, Haijun and Li, Yahui and Yin, Xia and Shi, Xingang and Wang, Zhiliang and Wu, Qianhong and Liu, Jianwei},
+  journal={IEEE/ACM Transactions on Networking},
+  volume={27},
+  number={6},
+  pages={2458--2471},
+  year={2019},
+  publisher={IEEE}
+}
+
+@article{yu2023sf,
+  title={$$\{$$\backslash$sf Serpens$\}$ $: a High Performance FaaS Platform for Network Functions},
+  author={Yu, Heng and Zhang, Han and Shen, Junxian and Geng, Yantao and Wang, Jilong and Miao, Congcong and Xu, Mingwei},
+  journal={IEEE Transactions on Parallel and Distributed Systems},
+  year={2023},
+  publisher={IEEE}
+}
+
+
+@article{wang2023dialectical,
+  title={From the dialectical perspective: Modeling and exploiting of hybrid worm propagation},
+  author={Wang, Tianbo and Li, Huacheng and Xia, Chunhe and Zhang, Han and Zhang, Pei},
+  journal={IEEE Transactions on Information Forensics and Security},
+  volume={18},
+  pages={1610--1624},
+  year={2023},
+  publisher={IEEE}
+}
+
+@article{li2023general,
+  title={A General Approach to Generate Test Packets With Network Configurations},
+  author={Li, Yahui and Zhang, Han and Wang, Jilong and Wang, Zhiliang and Yin, Xia and Shi, Xingang and Wu, Jianping},
+  journal={IEEE Transactions on Parallel and Distributed Systems},
+  volume={34},
+  number={4},
+  pages={1362--1375},
+  year={2023},
+  publisher={IEEE}
+}
