--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -88,3 +88,439 @@
   year={2023},
   publisher={IEEE}
 }
+
+@inproceedings{han2023anomaly,
+  title={Anomaly Detection in the Open World: Normality Shift Detection, Explanation, and Adaptation.},
+  author={Han, Dongqi and Wang, Zhiliang and Chen, Wenqi and Wang, Kai and Yu, Rui and Wang, Su and Zhang, Han and Wang, Zhihua and Jin, Minghui and Yang, Jiahai and others},
+  booktitle={NDSS},
+  year={2023}
+}
+
+@article{zhang2023real,
+  title={Real-time malicious traffic detection with online isolation forest over sd-wan},
+  author={Zhang, Pei and He, Fangzhou and Zhang, Han and Hu, Jiankun and Huang, Xiaohong and Wang, Jilong and Yin, Xia and Zhu, Huahong and Li, Yahui},
+  journal={IEEE Transactions on Information Forensics and Security},
+  volume={18},
+  pages={2076--2090},
+  year={2023},
+  publisher={IEEE}
+}
+
+@inproceedings{wang2023knocking,
+  title={Knocking Cells: Latency-Based Identification of IPv6 Cellular Addresses on the Internet},
+  author={Wang, Ming and Li, Yahui and Zhang, Han and Hong, Anlun and He, Jun and Wang, Jilong},
+  booktitle={2023 IEEE Symposium on Computers and Communications (ISCC)},
+  pages={790--796},
+  year={2023},
+  organization={IEEE}
+}
+
+@inproceedings{li2023puvar,
+  title={PUVAR: Minimize Idle Resource SLO Violations by Uncertainty-Aware Scheduling in Cloud Platforms},
+  author={Li, Jiawei and Zhang, Han and Wang, Jilong},
+  booktitle={2023 IEEE International Conference on Web Services (ICWS)},
+  pages={713--715},
+  year={2023},
+  organization={IEEE}
+}
+
+@inproceedings{geng2023delay,
+  title={Delay Based Congestion Control for Cross-Datacenter Networks},
+  author={Geng, Yantao and Zhang, Han and Shi, Xingang and Wang, Jilong and Yin, Xia and He, Dongbiao and Li, Yahui},
+  booktitle={2023 IEEE/ACM 31st International Symposium on Quality of Service (IWQoS)},
+  pages={1--4},
+  year={2023},
+  organization={IEEE}
+}
+
+@inproceedings{hong2023cheap,
+  title={A cheap and accurate delay-based IP Geolocation method using Machine Learning and Looking Glass},
+  author={Hong, Allen and Li, Yahui and Zhang, Han and Wang, Ming and An, Changqing and Wang, Jilong},
+  booktitle={2023 IFIP Networking Conference (IFIP Networking)},
+  pages={1--9},
+  year={2023},
+  organization={IEEE}
+}
+
+@inproceedings{he2023careful,
+  title={Be Careful of Your Neighbors: Injected Sub-Prefix Hijacking Invisible to Public Monitors},
+  author={He, Jun and Li, Yahui and Zhang, Han and Wang, Ming and An, Changqing and Wang, Jilong},
+  booktitle={ICC 2023-IEEE International Conference on Communications},
+  pages={3774--3780},
+  year={2023},
+  organization={IEEE}
+}
+
+@inproceedings{yu2023gapreplay,
+  title={GapReplay: A High-Accuracy Packet Replayer},
+  author={Yu, Shuanghong and Li, Fenghua and Zhang, Han and He, Kunling and Yao, Xingkun},
+  booktitle={ICC 2023-IEEE International Conference on Communications},
+  pages={1616--1621},
+  year={2023},
+  organization={IEEE}
+}
+
+@inproceedings{han2023anomaly,
+  title={Anomaly Detection in the Open World: Normality Shift Detection, Explanation, and Adaptation.},
+  author={Han, Dongqi and Wang, Zhiliang and Chen, Wenqi and Wang, Kai and Yu, Rui and Wang, Su and Zhang, Han and Wang, Zhihua and Jin, Minghui and Yang, Jiahai and others},
+  booktitle={NDSS},
+  year={2023}
+}
+
+@article{qiao2022netec,
+  title={NetEC: Accelerating erasure coding reconstruction with in-network aggregation},
+  author={Qiao, Yi and Zhang, Menghao and Zhou, Yu and Kong, Xiao and Zhang, Han and Xu, Mingwei and Bi, Jun and Wang, Jilong},
+  journal={IEEE Transactions on Parallel and Distributed Systems},
+  volume={33},
+  number={10},
+  pages={2571--2583},
+  year={2022},
+  publisher={IEEE}
+}
+
+@article{wang2022threatrace,
+  title={Threatrace: Detecting and tracing host-based threats in node level through provenance graph learning},
+  author={Wang, Su and Wang, Zhiliang and Zhou, Tao and Sun, Hongbin and Yin, Xia and Han, Dongqi and Zhang, Han and Shi, Xingang and Yang, Jiahai},
+  journal={IEEE Transactions on Information Forensics and Security},
+  volume={17},
+  pages={3972--3987},
+  year={2022},
+  publisher={IEEE}
+}
+
+@article{zhao2021efficient,
+  title={Efficient and accurate flow record collection with hashflow},
+  author={Zhao, Zongyi and Shi, Xingang and Wang, Zhiliang and Li, Qing and Zhang, Han and Yin, Xia},
+  journal={IEEE Transactions on Parallel and Distributed Systems},
+  volume={33},
+  number={5},
+  pages={1069--1083},
+  year={2021},
+  publisher={IEEE}
+}
+
+@inproceedings{han2022light,
+  title={Light-weight Unsupervised Anomaly Detection for Encrypted Malware Traffic},
+  author={Han, Shangbin and Wu, Qianhong and Zhang, Han and Qin, Bo},
+  booktitle={2022 7th IEEE International Conference on Data Science in Cyberspace (DSC)},
+  pages={206--213},
+  year={2022},
+  organization={IEEE}
+}
+
+@inproceedings{tian2022centralized,
+  title={Centralized Network Utility Maximization with Accelerated Gradient Method},
+  author={Tian, Ying and Wang, Zhiliang and Yin, Xia and Shi, Xingang and Yang, Jiahai and Zhang, Han},
+  booktitle={2022 IEEE 30th International Conference on Network Protocols (ICNP)},
+  pages={1--11},
+  year={2022},
+  organization={IEEE}
+}
+
+@inproceedings{chen2022dynamic,
+  title={Dynamic and Diverse Transformations for Defending Against Adversarial Examples},
+  author={Chen, Yongkang and Zhang, Ming and Li, Jin and Kuang, Xiaohui and Zhang, Xuhong and Zhang, Han},
+  booktitle={2022 IEEE International Conference on Trust, Security and Privacy in Computing and Communications (TrustCom)},
+  pages={976--983},
+  year={2022},
+  organization={IEEE}
+}
+
+@inproceedings{han2022autoperman,
+  title={Autoperman: Automatic Network Traffic Anomaly Detection with Ensemble Learning},
+  author={Han, Shangbin and Wu, Qianhong and Zhang, Han and Qin, Bo and Yao, Jiangyuan and Susilo, Willy},
+  booktitle={International Conference on Artificial Intelligence and Security},
+  pages={616--628},
+  year={2022},
+  organization={Springer}
+}
+
+@inproceedings{yu2022scorpius,
+  title={Scorpius: Proactive Code Preparation to Accelerate Function Startup},
+  author={Yu, Heng and Shen, Junxian and Zhang, Han and Wang, Jilong and Miao, Congcong and Xu, Mingwei},
+  booktitle={2022 IEEE/ACM 30th International Symposium on Quality of Service (IWQoS)},
+  pages={1--10},
+  year={2022},
+  organization={IEEE}
+}
+
+@article{han2021log,
+  title={Log-based anomaly detection with robust feature extraction and online learning},
+  author={Han, Shangbin and Wu, Qianhong and Zhang, Han and Qin, Bo and Hu, Jiankun and Shi, Xingang and Liu, Linfeng and Yin, Xia},
+  journal={IEEE Transactions on Information Forensics and Security},
+  volume={16},
+  pages={2300--2311},
+  year={2021},
+  publisher={IEEE}
+}
+
+@article{guo2021traffic,
+  title={Traffic engineering in hybrid software defined network via reinforcement learning},
+  author={Guo, Yingya and Wang, Weipeng and Zhang, Han and Guo, Wenzhong and Wang, Zhiliang and Tian, Ying and Yin, Xia and Wu, Jianping},
+  journal={Journal of Network and Computer Applications},
+  volume={189},
+  pages={103116},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@inproceedings{han2021deepaid,
+  title={Deepaid: Interpreting and improving deep learning-based anomaly detection in security applications},
+  author={Han, Dongqi and Wang, Zhiliang and Chen, Wenqi and Zhong, Ying and Wang, Su and Zhang, Han and Yang, Jiahai and Shi, Xingang and Yin, Xia},
+  booktitle={Proceedings of the 2021 ACM SIGSAC Conference on Computer and Communications Security},
+  pages={3197--3217},
+  year={2021}
+}
+
+@inproceedings{tian2021traffic,
+  title={Traffic Engineering with Segment Routing Considering Probabilistic Failures},
+  author={Tian, Ying and Wang, Zhiliang and Yin, Xia and Shi, Xingang and Yang, Jiahai and Zhang, Han and Guo, Yingya and Geng, Haijun},
+  booktitle={2021 17th International Conference on Network and Service Management (CNSM)},
+  pages={21--27},
+  year={2021},
+  organization={IEEE}
+}
+
+@inproceedings{chen2021cost,
+  title={Cost-efficient dynamic service function chain embedding in edge clouds},
+  author={Chen, Weihan and Wang, Zhiliang and Zhang, Han and Yin, Xia and Shi, Xingang},
+  booktitle={2021 17th International Conference on Network and Service Management (CNSM)},
+  pages={310--318},
+  year={2021},
+  organization={IEEE}
+}
+
+@article{geng2021efficient,
+  title={Efficient routing protection algorithm in large-scale networks},
+  author={Geng, Haijun and Zhang, Han and Zhang, Yangyang},
+  journal={Computers, Materials \& Continua},
+  volume={66},
+  number={2},
+  pages={1733--1744},
+  year={2021}
+}
+
+@article{li2020assisting,
+  title={Assisting reachability verification of network configurations updates with NUV},
+  author={Li, Yahui and Wang, Zhiliang and Yin, Xia and Shi, Xingang and Wu, Jianping and Ye, Fangdan and Yao, Jiangyuan and Zhang, Han},
+  journal={Computer Networks},
+  volume={177},
+  pages={107326},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{geng2020hybrid,
+  title={A hybrid link protection scheme for ensuring network service availability in link-state routing networks},
+  author={Geng, Haijun and Zhang, Han and Shi, Xingang and Wang, Zhiliang and Yin, Xia and Zhang, Ju and Hu, Zhiguo and Wu, Yong},
+  journal={Journal of Communications and Networks},
+  volume={22},
+  number={1},
+  pages={46--60},
+  year={2020},
+  publisher={KICS}
+}
+
+@inproceedings{chen2020joint,
+  title={Joint Optimization of Service Function Chain Elastic Scaling and Routing},
+  author={Chen, Weihan and Wang, Zhiliang and Zhang, Han and Yin, Xia and Shi, Xingang and Sun, Lei},
+  booktitle={IEEE INFOCOM 2020-IEEE Conference on Computer Communications Workshops (INFOCOM WKSHPS)},
+  pages={1306--1307},
+  year={2020},
+  organization={IEEE}
+}
+
+@article{geng2020efficient,
+  title={Efficient computation of loop-free alternates},
+  author={Geng, Haijun and Zhang, Han and Shi, Xingang and Wang, Zhiliang and Yin, Xia},
+  journal={Journal of Network and Computer Applications},
+  volume={151},
+  pages={102501},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{li2019msaid,
+  title={MSAID: Automated detection of interference in multiple SDN applications},
+  author={Li, Yahui and Wang, Zhiliang and Yao, Jiangyuan and Yin, Xia and Shi, Xingang and Wu, Jianping and Zhang, Han},
+  journal={Computer Networks},
+  volume={153},
+  pages={49--62},
+  year={2019},
+  publisher={Elsevier}
+}
+
+@article{li2018survey,
+  title={A survey on network verification and testing with formal methods: Approaches and challenges},
+  author={Li, Yahui and Yin, Xia and Wang, Zhiliang and Yao, Jiangyuan and Shi, Xingang and Wu, Jianping and Zhang, Han and Wang, Qing},
+  journal={IEEE Communications Surveys \& Tutorials},
+  volume={21},
+  number={1},
+  pages={940--969},
+  year={2018},
+  publisher={IEEE}
+}
+
+@article{guo2019joint,
+  title={Joint optimization of tasks placement and routing to minimize coflow completion time},
+  author={Guo, Yingya and Wang, Zhiliang and Zhang, Han and Yin, Xia and Shi, Xingang and Wu, Jianping},
+  journal={Journal of Network and Computer Applications},
+  volume={135},
+  pages={47--61},
+  year={2019},
+  publisher={Elsevier}
+}
+
+@article{guo2019joint,
+  title={Joint optimization of tasks placement and routing to minimize coflow completion time},
+  author={Guo, Yingya and Wang, Zhiliang and Zhang, Han and Yin, Xia and Shi, Xingang and Wu, Jianping},
+  journal={Journal of Network and Computer Applications},
+  volume={135},
+  pages={47--61},
+  year={2019},
+  publisher={Elsevier}
+}
+
+@article{zhang2019contrastive,
+  title={A contrastive study of machine learning on funding evaluation prediction},
+  author={Zhang, Chuqing and Zhang, Han and Hu, Xiaoting},
+  journal={Ieee Access},
+  volume={7},
+  pages={106307--106315},
+  year={2019},
+  publisher={IEEE}
+}
+
+@article{wang2019efficient,
+  title={Efficient scheduling of weighted coflows in data centers},
+  author={Wang, Zhiliang and Zhang, Han and Shi, Xingang and Yin, Xia and Li, Yahui and Geng, Haijun and Wu, Qianhong and Liu, Jianwei},
+  journal={IEEE Transactions on Parallel and Distributed Systems},
+  volume={30},
+  number={9},
+  pages={2003--2017},
+  year={2019},
+  publisher={IEEE}
+}
+
+@article{ma2018energy,
+  title={Energy-aware computation offloading of IoT sensors in cloudlet-based mobile edge computing},
+  author={Ma, Xiao and Lin, Chuang and Zhang, Han and Liu, Jianwei},
+  journal={Sensors},
+  volume={18},
+  number={6},
+  pages={1945},
+  year={2018},
+  publisher={MDPI}
+}
+
+@article{刘智峰2018层次化跨区域,
+  title={层次化跨区域 SDN 验证示范系统的设计与建设},
+  author={刘智峰 and 尹霞 and 王之梁 and 施新刚 and 华一强 and 黄小红 and 魏亮 and 姚姜源 and 张晗 and 曾曼 and others},
+  journal={电信科学},
+  volume={34},
+  number={11},
+  pages={21--30},
+  year={2018}
+}
+
+@article{zhang2017more,
+  title={More load, more differentiation—Let more flows finish before deadline in data center networks},
+  author={Zhang, Han and Shi, Xingang and Guo, Yingya and Wang, Zhiliang and Yin, Xia},
+  journal={Computer Networks},
+  volume={127},
+  pages={352--367},
+  year={2017},
+  publisher={Elsevier}
+}
+
+@inproceedings{zhang2017yosemite,
+  title={Yosemite: efficient scheduling of weighted coflows in data centers},
+  author={Zhang, Han and Shi, Xingang and Yin, Xia and Wang, Zhiliang},
+  booktitle={2017 IEEE 25th International Conference on Network Protocols (ICNP)},
+  pages={1--2},
+  year={2017},
+  organization={IEEE}
+}
+
+@inproceedings{zhang2017joint,
+  title={Joint source selection and transfer optimization for erasure coding storage system},
+  author={Zhang, Han and Shi, Xingang and Guo, YingYa and Geng, Haijun and Wang, Zhiliang and Yin, Xia},
+  booktitle={2017 IEEE 36th International Performance Computing and Communications Conference (IPCCC)},
+  pages={1--8},
+  year={2017},
+  organization={IEEE}
+}
+
+@inproceedings{zhao2016reduce,
+  title={Reduce completion time and guarantee throughput by transport with slight congestion},
+  author={Zhao, Zongyi and Li, Qing and Xu, Mingwei and Shi, Xingang and Zhang, Han},
+  booktitle={2016 IEEE International Conference on Communications (ICC)},
+  pages={1--6},
+  year={2016},
+  organization={IEEE}
+}
+
+@inproceedings{zhang2016fdrc,
+  title={Fdrc-flow duration time based rate control in data center networks},
+  author={Zhang, Han and Shi, Xingang and Yin, Xia and Wang, Zhiliang and Guo, YingYa},
+  booktitle={2016 IEEE/ACM 24th International Symposium on Quality of Service (IWQoS)},
+  pages={1--10},
+  year={2016},
+  organization={IEEE}
+}
+
+@inproceedings{geng2015efficient,
+  title={An efficient link protection scheme for link-state routing networks},
+  author={Geng, Haijun and Shi, Xingang and Yin, Xia and Wang, Zhiliang and Zhang, Han},
+  booktitle={2015 IEEE International Conference on Communications (ICC)},
+  pages={6024--6029},
+  year={2015},
+  organization={IEEE}
+}
+
+@inproceedings{zhang2015more,
+  title={More load, more differentiation—A design principle for deadline-aware congestion control},
+  author={Zhang, Han and Shi, Xingang and Yin, Xia and Ren, Fengyuan and Wang, Zhiliang},
+  booktitle={2015 IEEE Conference on Computer Communications (INFOCOM)},
+  pages={127--135},
+  year={2015},
+  organization={IEEE}
+}
+
+@inproceedings{guo2015incremental,
+  title={Incremental deployment for traffic engineering in hybrid SDN network},
+  author={Guo, Yingya and Wang, Zhiliang and Yin, Xia and Shi, Xingang and Wu, Jianping and Zhang, Han},
+  booktitle={2015 IEEE 34th international performance computing and communications conference (IPCCC)},
+  pages={1--8},
+  year={2015},
+  organization={IEEE}
+}
+
+@inproceedings{geng2015algebra,
+  title={Algebra and algorithms for efficient and correct multipath QoS routing in link state networks},
+  author={Geng, Haijun and Shi, Xingang and Yin, Xia and Wang, Zhiliang and Zhang, Han},
+  booktitle={2015 IEEE 23rd International Symposium on Quality of Service (IWQoS)},
+  pages={261--266},
+  year={2015},
+  organization={IEEE}
+}
+
+@inproceedings{geng2014hybrid,
+  title={A hybrid link protection scheme for link-state routing networks},
+  author={Geng, Haijun and Shi, Xingang and Yin, Xia and Wang, Zhiliang and Zhang, Han and Yao, Jiangyuan},
+  booktitle={2014 IEEE 33rd International Performance Computing and Communications Conference (IPCCC)},
+  pages={1--2},
+  year={2014},
+  organization={IEEE}
+}
+
+@article{张晗2012基于小波分解的网络流量时间序列建模与预测,
+  title={基于小波分解的网络流量时间序列建模与预测},
+  author={张晗 and 王霞},
+  journal={计算机应用研究},
+  volume={29},
+  number={8},
+  pages={3134--3136},
+  year={2012}
+}
+
