update lab intro

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,6 +12,7 @@
   html={},
   pdf={},
   url={},
+  selected={true},
 }
 
 @article{zhang2022achieving,
@@ -23,6 +24,7 @@
   html={},
   pdf={},
   url={},
+  selected={true},
 }
 
 @inproceedings{shen2022gringotts,
@@ -34,6 +36,7 @@
   html={},
   pdf={},
   url={},
+  selected={true},
 }
 
 @inproceedings{zhang2021boosting,
@@ -45,6 +48,7 @@
   html={},
   pdf={},
   url={},
+  selected={true},
 }
 
 
@@ -60,6 +64,7 @@
   html={},
   pdf={},
   url={},
+  selected={true},
 }
 
 @article{yu2023sf,
