--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,6 +12,7 @@
   html={},
   pdf={},
   url={},
+  abs={},
   selected={true},
 }
 
@@ -24,6 +25,7 @@
   html={},
   pdf={},
   url={},
+  abs={},
   selected={true},
 }
 
@@ -36,6 +38,7 @@
   html={},
   pdf={},
   url={},
+  abs={},
   selected={true},
 }
 
@@ -48,6 +51,7 @@
   html={},
   pdf={},
   url={},
+  abs={},
   selected={true},
 }
 
@@ -64,6 +68,7 @@
   html={},
   pdf={},
   url={},
+  abs={},
   selected={true},
 }
 
@@ -76,6 +81,7 @@
   html={},
   pdf={},
   url={},
+  abs={},
 }
 
 
