--- a/_projects/7.md
+++ b/_projects/7.md
@@ -1,9 +1,9 @@
 ---
 layout: page
-title: 耿彦涛
+title: 沈俊贤
 description: a project with a background image
-img: assets/img/gyt.jpg
-importance: 2
+img: assets/img/1.jpg
+importance: 1
 category: 博士
 related_publications: true
 ---
